--- a/1. Redux & plain Javascript/v02-STORE,STATE,DISPATCH(ACTION),REDUCER.html
+++ b/1. Redux & plain Javascript/v02-STORE,STATE,DISPATCH(ACTION),REDUCER.html
@@ -17,9 +17,10 @@
     <script>
       // step 1.2
       console.group('Redux.createStore(REDUCER)')
-      var store = Redux.createStore(counter);
+      var store = Redux.createStore(counter);//這邊的參數counter是經過reducer傳遞進來的
       console.groupEnd('Redux.createStore(REDUCER)')
       // ~end step 1.2
+
       // step 1.3
       var valueEl = document.getElementById('value');
       function render() {
@@ -30,26 +31,39 @@
       }
       render();
       store.subscribe(render);
+      //store.subscribe每次都重新調用(invoke)render()至畫面上，
+      //因為如果沒有這個，每次調用時render不會有反應。
       // ~end step 1.3
+
       // step 2.2
-      function counter(currentState, action) { // REDUCER
+      function counter(currentState, action) { 
+        // 這個function counter是REDUCER
+        //第一個參數currentState為state object
+        //第二個參數action為下面一個叫做action的object，也就是dispatch(action)
         var DEFAULT_STATE = {count:0};
+
         console.group('REDUCER')
         var nextState = Object.assign({}, currentState);
+        //var nextState = Object.assign({},currentState)
+        //這行的意思是clone currentState這個object到nextState
         console.log('current STATE == ', currentState)
-        if(currentState === undefined){ // look at Note 1.1
+        if(currentState === undefined){
+           // look at Note 1.2 state在store剛宣告時是undefine的
           nextState = DEFAULT_STATE; // Note 1.2
           console.log('next STATE == ', nextState)
           console.groupEnd('REDUCER')
           return nextState;
         }
-
+       
         switch(action.type){
           case 'DECREMENT': // look at Note 2.1
             nextState.count = currentState.count - 1;
             console.log('next STATE == ', nextState)
             console.groupEnd('REDUCER')
             return nextState; // Note 2.2
+          case 'SUM': 
+          nextState.sum = action.a + action.b;
+          return nextState;
           default:
             return nextState;
         }
@@ -59,10 +73,11 @@
         .addEventListener('click', function () {
             // step 2.1
             var action = {type: 'DECREMENT'}; // Note 2.1
+            //var action = {type: 'SUM',a:10,b:15}
             console.log("");
             console.group("store.dispatch(action)")
             console.info("ACTION == ", action)
-            store.dispatch(action);
+            store.dispatch(action);//接收action這個object為參數，並傳入reducer中同時觸發updating
             console.groupEnd("store.dispatch(action)")
             // ~end step 2.1
         })
